# Bank-account

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
bank_account_app/: manage.py
bank_account_app/bank_account/: admin.py  forms.py  models.py  urls.py  views.py
bank_account_app/bank_account/migrations/: 0001_initial.py  0002_transaction.py  0003_transaction_bank_account.py  0004_transaction_created_at.py  0005_bankaccount_created_at.py  0006_transaction_recipient_bank_account.py  0007_transaction_status.py
bank_account_app/bank_account/static/bank_account/: main.css  main.js
bank_account_app/bank_account/templates/bank_account/: bank_account_detail.html  bank_accounts.html  create_bank_account.html  index.html  login.html  navbar.html  registration.html  transaction_detail.html  transaction_form.html  transactions_list.html  users.html
bank_account_app/bank_account_app/: asgi.py  local.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
tests/: test_tayle_test_task.py
